# docbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP-AND-FEATURES.md  config.example.json  docker-compose.yml  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
db/: 001_initial_schema.sql  002_patients_conversations.sql  002_payment_schema.sql  003_refund_schema.sql  004_reminder_tracking.sql  005_prescription_enhancement.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
scripts/: admin_override.py  backup_verify.py  backup_verify.sh  run_reconciliation.py  run_reminders.py
src/docbot/: __init__.py  alerts.py  auth.py  booking_service.py  bot_handler.py  calendar_service.py  cancellation_service.py  config.py  conversation.py  dashboard_api.py  database.py  i18n.py  main.py  (+18 more)
tests/: conftest.py  test_booking_service.py  test_bot_handler.py  test_calendar_service.py  test_cancellation_service.py  test_conversation.py  test_dashboard_api.py  test_e2e_booking.py  test_e2e_payment.py  test_e2e_prescription.py  test_google_calendar_client.py  test_i18n.py  test_idempotency.py  test_patient_store.py  test_payment_service.py  test_prescription_delivery.py  test_prescription_service.py  test_razorpay_client.py  test_reconciliation.py  test_refund_service.py  test_reminder_service.py  test_slot_service.py  test_state_machine.py  test_timezone_utils.py  test_webhook.py  test_whatsapp_client.py
(+121 files in other folders)
